Setup bot basics

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "em-data-bot",
   "version": "1.0.0",
   "description": "A bot to talk to the EM database",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "test"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/mantinone/EM-Data-Bot/issues"
   },
-  "homepage": "https://github.com/mantinone/EM-Data-Bot#readme"
+  "homepage": "https://github.com/mantinone/EM-Data-Bot#readme",
+  "dependencies": {
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0"
+  }
 }
